<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".ui.CreateProfileFragment">

  <com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:elevation="0dp">

    <androidx.appcompat.widget.Toolbar
      android:id="@+id/create_profile_bar"
      style="@style/Widget.MediaTo.Toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      app:subtitleTextColor="#000000"
      app:title="@string/mt_new_profile_topbar" />
  </com.google.android.material.appbar.AppBarLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="24dp"
    android:paddingTop="16dp"
    tools:ignore="UselessParent">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/profile_image_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/plus_icon"
        app:backgroundTint="@color/gray"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image"
        app:layout_constraintEnd_toEndOf="@+id/profile_image"
        android:contentDescription="@string/mt_profile_image_button_description"
        android:focusable="true" />

      <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/profile_picture_big"
        android:layout_height="@dimen/profile_picture_big"
        android:src="@drawable/profile_picture_default"
        android:theme="@style/Theme.one"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Snippet from "Add text fields" section goes here. -->

    <Space
      android:layout_width="match_parent"
      android:layout_height="40dp" />

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/username_text_input"
      style='@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense'
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:hint="@string/mt_username_hint"
      android:minWidth="300dp"
      android:maxWidth="300dp"
      app:counterEnabled="true"
      app:counterMaxLength="20"
      app:endIconContentDescription="@string/mt_username_description_end_icon"
      app:endIconDrawable="@drawable/generate_username"
      app:endIconMode="custom"
      app:errorEnabled="true"
      app:errorIconDrawable="@null"
      app:helperText="@string/mt_username_helper_text">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
        android:maxLength="@integer/mt_username_max_length"
        android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Space
      android:layout_width="match_parent"
      android:layout_height="40dp" />

    <Button
      android:id="@+id/create_profile_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="20sp"
      android:textAllCaps="false"
      android:text="@string/mt_button_create_profile" />


  </LinearLayout>

</FrameLayout>