<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:orientation="vertical">

  <FrameLayout
      android:id="@+id/main_container"
      android:layout_width="match_parent"
      android:layout_height="0dip"
      android:layout_weight="1"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

  <androidx.coordinatorlayout.widget.CoordinatorLayout
      android:id="@+id/coordinator"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent">

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:fabCradleMargin="10dp"
        style="@style/CustomBottomBarTheme"
        app:fabCradleRoundedCornerRadius="50dp">

      <com.google.android.material.bottomnavigation.BottomNavigationView
          android:id="@+id/bottomNavigationView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="20dp"
          app:labelVisibilityMode="labeled"
          app:itemIconTint="@drawable/bottom_bar_item_color"
          app:itemTextColor="@drawable/bottom_bar_item_color"
          style="@style/CustomBottomBarTheme"

          app:menu="@menu/bottom_menu" />

    </com.google.android.material.bottomappbar.BottomAppBar>
  </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>
