<resources>
    <string name="mt_app_name">MediaTo</string>

    <!--CreateProfileFragment-->
    <string name="mt_username_error_null">The username is null</string>
    <string name="mt_username_error_too_short">The username is too short</string>
    <string name="mt_username_error_already_taken">The username is already taken</string>

    <!--fragment_create_profile.xml-->
    <string name="mt_new_profile_topbar">Create your profile</string>
    <string name="mt_profile_image_button_description">Select picture</string>
    <string name="mt_username_hint">Username</string>
...
